--- a/helm/dashboard/templates/dashboard_ingress.yaml
+++ b/helm/dashboard/templates/dashboard_ingress.yaml
@@ -18,13 +18,8 @@ kind: Ingress
 metadata:
   name: {{ template "dashboard.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ template "dashboard.name" . }}
-    app.kubernetes.io/component: controller
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ template "dashboard.chart" . }}
-    dashboard.tekton.dev/release: {{ .Values.version | quote }}
-    version: {{ .Values.version | quote }}
+    {{- include "dashboard.baseLabels" . | nindent 4 }}
+    {{- include "dashboard.helmLabels" . | nindent 4 }}
   {{- with .Values.dashboard.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
