--- a/helm/dashboard/templates/serviceaccount.yaml
+++ b/helm/dashboard/templates/serviceaccount.yaml
@@ -17,4 +17,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "dashboard.serviceAccountName" . }}
+  labels:
+    {{- include "dashboard.baseLabels" . | nindent 4 }}
+    {{- include "dashboard.helmLabels" . | nindent 4 }}
 {{- end }}
