--- a/helm/pipeline/templates/serviceaccount.yaml
+++ b/helm/pipeline/templates/serviceaccount.yaml
@@ -17,4 +17,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "pipeline.serviceAccountName" . }}
+  labels:
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
 {{- end }}
