--- a/helm/pipeline/templates/webhook_secret.yaml
+++ b/helm/pipeline/templates/webhook_secret.yaml
@@ -18,10 +18,7 @@ kind: Secret
 metadata:
   name: webhook-certs
   labels:
-    app.kubernetes.io/name: {{ template "pipeline.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ template "pipeline.chart" . }}
-    pipeline.tekton.dev/release: {{ .Values.version | quote }}
-    version: {{ .Values.version | quote }}
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
+    {{- include "pipeline.componentLabels" "webhook" | nindent 4 }}
 {{- end }}
