--- a/helm/pipeline/templates/webhook_service.yaml
+++ b/helm/pipeline/templates/webhook_service.yaml
@@ -18,13 +18,11 @@ kind: Service
 metadata:
   name: {{ template "pipeline.fullname" . }}-webhook
   labels:
-    app.kubernetes.io/name: {{ template "pipeline.name" . }}
-    app.kubernetes.io/component: webhook
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ template "pipeline.chart" . }}
-    pipeline.tekton.dev/release: {{ .Values.version | quote }}
-    version: {{ .Values.version | quote }}
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
+    {{- include "pipeline.versionLabels" . | nindent 4 }}
+    {{- include "pipeline.componentLabels" "webhook" | nindent 4 }}
+    {{- include "pipeline.nameLabels" "webhook" | nindent 4 }}
   {{- with .Values.webhook.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
@@ -49,7 +47,7 @@ spec:
       targetPort: 8008
     {{- end }}
   selector:
-    app.kubernetes.io/name: {{ template "pipeline.name" . }}
-    app.kubernetes.io/component: webhook
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.componentLabels" "webhook" | nindent 4 }}
+    {{- include "pipeline.nameLabels" "webhook" | nindent 4 }}
 {{- end }}
