--- a/helm/triggers/templates/configmaps.yaml
+++ b/helm/triggers/templates/configmaps.yaml
@@ -16,6 +16,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "triggers.fullname" . }}-logging
+  labels:
+    {{- include "triggers.baseLabels" . | nindent 4 }}
+    {{- include "triggers.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.config.logging | toYaml | indent 2 }}
 ---
@@ -23,5 +26,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "triggers.fullname" . }}-observability
+  labels:
+    {{- include "triggers.baseLabels" . | nindent 4 }}
+    {{- include "triggers.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.config.observability | toYaml | indent 2 }}
