--- a/helm/triggers/templates/serviceaccount.yaml
+++ b/helm/triggers/templates/serviceaccount.yaml
@@ -17,4 +17,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "triggers.serviceAccountName" . }}
+  labels:
+    {{- include "triggers.baseLabels" . | nindent 4 }}
+    {{- include "triggers.helmLabels" . | nindent 4 }}
 {{- end }}
