--- a/helm/triggers/templates/webhook_secret.yaml
+++ b/helm/triggers/templates/webhook_secret.yaml
@@ -12,30 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: apiextensions.k8s.io/v1beta1
-kind: CustomResourceDefinition
+{{- if .Values.webhook.enabled }}
+apiVersion: v1
+kind: Secret
 metadata:
-  name: triggertemplates.triggers.tekton.dev
+  name: triggers-webhook-certs
   labels:
-    app.kubernetes.io/part-of: tekton-triggers
-spec:
-  group: triggers.tekton.dev
-  scope: Namespaced
-  versions:
-    - name: v1alpha1
-      served: true
-      storage: true
-  names:
-    kind: TriggerTemplate
-    plural: triggertemplates
-    singular: triggertemplate
-    shortNames:
-      - tt
-    categories:
-      - tekton
-      - tekton-triggers
-  # Opt into the status subresource so metadata.generation
-  # starts to increment
-  subresources:
-    status: {}
-  version: v1alpha1
+    {{- include "triggers.baseLabels" . | nindent 4 }}
+    {{- include "triggers.helmLabels" . | nindent 4 }}
+    {{- include "triggers.componentLabels" "webhook" | nindent 4 }}
+{{- end }}
