--- a/helm/dashboard/crds/extension.yaml
+++ b/helm/dashboard/crds/extension.yaml
@@ -16,12 +16,14 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: extensions.dashboard.tekton.dev
+  labels:
+    app.kubernetes.io/part-of: tekton-dashboard
 spec:
   group: dashboard.tekton.dev
   names:
     categories:
-    - tekton
-    - tekton-dashboard
+      - tekton
+      - tekton-dashboard
     kind: Extension
     plural: extensions
   scope: Namespaced
