--- a/helm/pipeline/crds/condition.yaml
+++ b/helm/pipeline/crds/condition.yaml
@@ -16,6 +16,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: conditions.tekton.dev
+  labels:
+    app.kubernetes.io/part-of: tekton-pipelines
 spec:
   group: tekton.dev
   names:
