--- a/helm/pipeline/crds/resource.yaml
+++ b/helm/pipeline/crds/resource.yaml
@@ -16,14 +16,16 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: pipelineresources.tekton.dev
+  labels:
+    app.kubernetes.io/part-of: tekton-pipelines
 spec:
   group: tekton.dev
   names:
     kind: PipelineResource
     plural: pipelineresources
     categories:
-    - tekton
-    - tekton-pipelines
+      - tekton
+      - tekton-pipelines
   scope: Namespaced
   # Opt into the status subresource so metadata.generation
   # starts to increment
