--- a/helm/pipeline/templates/configmaps.yaml
+++ b/helm/pipeline/templates/configmaps.yaml
@@ -17,6 +17,9 @@ data: null
 kind: ConfigMap
 metadata:
   name: {{ template "pipeline.fullname" . }}-artifact-bucket
+  labels:
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.controller.config.artifactBucket | toYaml | indent 2 }}
 ---
@@ -25,6 +28,9 @@ data: null
 kind: ConfigMap
 metadata:
   name: {{ template "pipeline.fullname" . }}-artifact-pvc
+  labels:
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.controller.config.artifactPvc | toYaml | indent 2 }}
 ---
@@ -33,6 +39,9 @@ kind: ConfigMap
 metadata:
   # name: {{ template "pipeline.fullname" . }}-defaults
   name: config-defaults
+  labels:
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.controller.config.defaults | toYaml | indent 2 }}
 ---
@@ -40,6 +49,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "pipeline.fullname" . }}-feature-flags
+  labels:
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.controller.config.featureFlags | toYaml | indent 2 }}
 ---
@@ -47,6 +59,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "pipeline.fullname" . }}-leader-election
+  labels:
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.controller.config.leaderElection | toYaml | indent 2 }}
 ---
@@ -54,6 +69,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "pipeline.fullname" . }}-logging
+  labels:
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.controller.config.logging | toYaml | indent 2 }}
 ---
@@ -61,5 +79,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "pipeline.fullname" . }}-observability
+  labels:
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
 data:
 {{ .Values.controller.config.observability | toYaml | indent 2 }}
