--- a/helm/pipeline/templates/webhook_deployment.yaml
+++ b/helm/pipeline/templates/webhook_deployment.yaml
@@ -18,13 +18,11 @@ kind: Deployment
 metadata:
   name: {{ template "pipeline.fullname" . }}-webhook
   labels:
-    app.kubernetes.io/name: {{ template "pipeline.name" . }}
-    app.kubernetes.io/component: webhook
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ template "pipeline.chart" . }}
-    pipeline.tekton.dev/release: {{ .Values.version | quote }}
-    version: {{ .Values.version | quote }}
+    {{- include "pipeline.baseLabels" . | nindent 4 }}
+    {{- include "pipeline.helmLabels" . | nindent 4 }}
+    {{- include "pipeline.versionLabels" . | nindent 4 }}
+    {{- include "pipeline.componentLabels" "webhook" | nindent 4 }}
+    {{- include "pipeline.nameLabels" "webhook" | nindent 4 }}
 spec:
   replicas: {{ .Values.webhook.replicas }}
   {{- with .Values.webhook.updateStrategy }}
@@ -33,9 +31,9 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ template "pipeline.name" . }}
-      app.kubernetes.io/component: webhook
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- include "pipeline.baseLabels" . | nindent 6 }}
+      {{- include "pipeline.componentLabels" "webhook" | nindent 6 }}
+      {{- include "pipeline.nameLabels" "webhook" | nindent 6 }}
   template:
     metadata:
       {{- with .Values.webhook.annotations }}
@@ -43,13 +41,11 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        app.kubernetes.io/name: {{ template "pipeline.name" . }}
-        app.kubernetes.io/component: webhook
-        app.kubernetes.io/instance: {{ .Release.Name }}
-        app.kubernetes.io/managed-by: {{ .Release.Service }}
-        helm.sh/chart: {{ template "pipeline.chart" . }}
-        pipeline.tekton.dev/release: {{ .Values.version | quote }}
-        version: {{ .Values.version | quote }}
+        {{- include "pipeline.baseLabels" . | nindent 8 }}
+        {{- include "pipeline.helmLabels" . | nindent 8 }}
+        {{- include "pipeline.versionLabels" . | nindent 8 }}
+        {{- include "pipeline.componentLabels" "webhook" | nindent 8 }}
+        {{- include "pipeline.nameLabels" "webhook" | nindent 8 }}
     spec:
       serviceAccountName: {{ template "pipeline.serviceAccountName" . }}
       {{- with .Values.webhook.securityContext }}
