--- a/helm/triggers/crds/clustertriggerbinding.yaml
+++ b/helm/triggers/crds/clustertriggerbinding.yaml
@@ -16,6 +16,8 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: clustertriggerbindings.triggers.tekton.dev
+  labels:
+    app.kubernetes.io/part-of: tekton-triggers
 spec:
   group: triggers.tekton.dev
   scope: Cluster
