--- a/helm/triggers/templates/clusterrolebinding.yaml
+++ b/helm/triggers/templates/clusterrolebinding.yaml
@@ -17,6 +17,9 @@ apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRoleBinding
 metadata:
   name: {{ template "triggers.fullname" . }}
+  labels:
+    {{- include "triggers.baseLabels" . | nindent 4 }}
+    {{- include "triggers.helmLabels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
