--- a/helm/triggers/templates/webhook_service.yaml
+++ b/helm/triggers/templates/webhook_service.yaml
@@ -18,13 +18,11 @@ kind: Service
 metadata:
   name: {{ template "triggers.fullname" . }}-webhook
   labels:
-    app.kubernetes.io/name: {{ template "triggers.name" . }}
-    app.kubernetes.io/component: webhook
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    helm.sh/chart: {{ template "triggers.chart" . }}
-    triggers.tekton.dev/release: {{ .Values.version | quote }}
-    version: {{ .Values.version | quote }}
+    {{- include "triggers.baseLabels" . | nindent 4 }}
+    {{- include "triggers.helmLabels" . | nindent 4 }}
+    {{- include "triggers.versionLabels" . | nindent 4 }}
+    {{- include "triggers.componentLabels" "webhook" | nindent 4 }}
+    {{- include "triggers.nameLabels" "webhook" | nindent 4 }}
   {{- with .Values.webhook.service.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
@@ -49,7 +47,7 @@ spec:
       targetPort: 8008
     {{- end }}
   selector:
-    app.kubernetes.io/name: {{ template "triggers.name" . }}
-    app.kubernetes.io/component: webhook
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "triggers.baseLabels" . | nindent 4 }}
+    {{- include "triggers.componentLabels" "webhook" | nindent 4 }}
+    {{- include "triggers.nameLabels" "webhook" | nindent 4 }}
 {{- end }}
