--- a/helm/dashboard/templates/rolebinding.yaml
+++ b/helm/dashboard/templates/rolebinding.yaml
@@ -13,21 +13,25 @@
 # limitations under the License.
 
 {{- if .Values.rbac.create }}
-{{- if not .Values.rbac.namespaces }}
+{{- if .Values.rbac.namespaces }}
+{{- range .Values.rbac.namespaces }}
+---
 apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: {{ template "dashboard.fullname" . }}
+  name: {{ template "dashboard.fullname" $ }}
+  namespace: {{ . }}
   labels:
-    {{- include "dashboard.baseLabels" . | nindent 4 }}
-    {{- include "dashboard.helmLabels" . | nindent 4 }}
+    {{- include "dashboard.baseLabels" $ | nindent 4 }}
+    {{- include "dashboard.helmLabels" $ | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ template "dashboard.fullname" . }}
+  name: {{ template "dashboard.fullname" $ }}
 subjects:
   - kind: ServiceAccount
-    name: {{ template "dashboard.serviceAccountName" . }}
-    namespace: {{ .Release.Namespace }}
+    name: {{ template "dashboard.serviceAccountName" $ }}
+    namespace: {{ $.Release.Namespace }}
+{{- end }}
 {{- end }}
 {{- end }}
