--- a/commit-status-tracker/docs/examples/pipeline_run_with_git.yaml
+++ b/commit-status-tracker/docs/examples/pipeline_run_with_git.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   name: demo-pipeline-run
@@ -23,7 +23,7 @@ metadata:
 spec:
   pipelineRef:
     name: demo-pipeline
-  serviceAccountName: 'default'
+  serviceAccountName: default
   resources:
   - name: source
     resourceSpec:
