Add support for tasks and pipelines
Make changes to parse from the full github spec. Write the task and
the pipeline to one file. Add git-clone and github-set-status task in
the pipeline. Attach labels to facilitate bulk queries.

--- a/generators/pkg/parser/testdata/spec.yaml
+++ b/generators/pkg/parser/testdata/spec.yaml
@@ -6,6 +6,6 @@ steps:
       - /kaniko/executor
     args:
       - --context=dir://$(workspaces.input.path)/src
-      - --destination=gcr.io/wlynch-test/kaniko-test
+      - --destination=gcr.io/<use your project>/kaniko-test
       - --verbosity=debug
   
