--- a/generators/pkg/writer/testdata/spec.yaml
+++ b/generators/pkg/writer/testdata/spec.yaml
@@ -6,5 +6,5 @@ steps:
       - /kaniko/executor
     args:
       - --context=dir://$(workspaces.input.path)/src
-      - --destination=gcr.io/wlynch-test/kaniko-test
+      - --destination=gcr.io/<use your project>/kaniko-test
       - --verbosity=debug
